[package]
name = "rezip"
version = "0.1.0"
edition = "2024"
authors = ["Xiaxiaobai shizheqwq@gmail.com"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.60", features = ["derive"] }
file-format = { version = "0.28.0", path = "vendor/file-format" }
image = "0.25.9"
sevenz-rust2 = { version = "0.20.1", features = ["zstd", "brotli", "deflate", "lz4"] }
tar = "0.4.44"
tempfile = "3.24.0"
unrar = "0.5.8"
walkdir = "2.5.0"
zip = "7.2.0"
zune-core = "0.5.1"
zune-jpegxl = "0.5.2"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
debug = 0
panic = "abort"
